# LAUREL

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  docs.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters_build_runners.yml  parameters_build_scenario_runners.yml  parameters_build_scenarios.yml  parameters_compute_routes.yml  parameters_describe_dwells.yml  parameters_describe_locations.yml  parameters_describe_vehicles.yml  parameters_electrify_trips.yml  parameters_evaluate_impacts.yml  parameters_graphhopper.yml  parameters_prepare_totals.yml  parameters_preprocess.yml  parameters_sample_charging.yml  parameters_train.yml
conf/scenario_builders/batt_pow/: parameters_build_scenarios.yml
conf/scenario_builders/boot_scale/: parameters_build_scenarios.yml
conf/scenario_builders/ca_eight/: parameters_build_scenarios.yml
conf/scenario_builders/ca_eight_adopt/: parameters_build_scenarios.yml
conf/scenario_builders/graph_import/: parameters_build_scenarios.yml
conf/scenario_builders/ranger/: parameters_build_scenarios.yml
conf/scenario_builders/routing/: parameters_build_scenarios.yml
conf/scenario_builders/scale_test/: parameters_build_scenarios.yml
conf/scenario_builders/sense/: parameters_build_scenarios.yml
conf/scenario_builders/sense_manage/: parameters_build_scenarios.yml
conf/scenario_builders/sense_rev/: parameters_build_scenarios.yml
conf/scenario_runners/batt_dual_pow/: parameters_build_runners.yml
conf/scenario_runners/batt_man/: parameters_build_runners.yml
conf/scenario_runners/batt_pow/: parameters_build_runners.yml
conf/scenario_runners/boot_scale/: parameters_build_runners.yml
conf/scenario_runners/ca_eight/: parameters_build_runners.yml
conf/scenario_runners/ca_eight_adopt/: parameters_build_runners.yml
conf/scenario_runners/delay/: parameters_build_runners.yml
conf/scenario_runners/graph_import/: parameters_build_runners.yml
conf/scenario_runners/optional_stops/: parameters_build_runners.yml
conf/scenario_runners/ranger/: parameters_build_runners.yml
conf/scenario_runners/routing/: parameters_build_runners.yml
conf/scenario_runners/scale_test/: parameters_build_runners.yml
conf/scenario_runners/sense/: parameters_build_runners.yml
conf/scenario_runners/sense_manage/: parameters_build_runners.yml
conf/scenario_runners/sense_rev/: parameters_build_runners.yml
conf/scenarios/: README.md
containers/: README.md
data/01_raw/adoption_policies/: acf_zev_milestones.csv  act_states.csv
data/01_raw/establishments/: freight_intensive_naics.csv  naics_tree_focus_leaves.csv
data/01_raw/land_use/: land_use_groups.csv
docs/source/: api.rst  conf.py  index.rst  laurel.datasets.rst  laurel.models.rst  laurel.pipelines.build_scenarios.rst  laurel.pipelines.compute_routes.rst  laurel.pipelines.describe_dwells.rst  laurel.pipelines.describe_locations.rst  laurel.pipelines.describe_vehicles.rst  laurel.pipelines.electrify_trips.rst  laurel.pipelines.evaluate_impacts.rst  laurel.pipelines.prepare_totals.rst  laurel.pipelines.preprocess.rst  laurel.pipelines.rst  laurel.routing.rst  laurel.rst  laurel.scenario_builders.rst  laurel.scenario_framework.rst  laurel.utils.rst  megaPLuG.datasets.rst  megaPLuG.models.rst  megaPLuG.pipelines.build_runners.rst  megaPLuG.pipelines.describe_locations.rst  megaPLuG.pipelines.describe_vehicles.rst  megaPLuG.pipelines.electrify_trips.rst  megaPLuG.pipelines.evaluate_impacts.rst  megaPLuG.pipelines.preprocess.rst  megaPLuG.pipelines.rst  megaPLuG.rst  megaPLuG.scenarios.rst  megaPLuG.utils.rst  megaplug.models.routing.rst  megaplug.pipelines.compute_routes.rst  megaplug.pipelines.describe_dwells.rst  megaplug.pipelines.prepare_totals.rst  modules.rst  user_guide.rst
logs/slurm/: README.md
scripts/scenarios/: validate.sh
scripts/setup/: 01_download_osm.sh  02a_describe_locations.sh  02b_import_graph.sh  02c_preprocess_trips.sh  03_prepare_routing.sh  04_compute_routes.sh  05_optional_stops.sh  06_describe_dwells.sh  07_describe_vehicles.sh  08_prepare_totals.sh
src/epa_phase_iii/: __main__.py  settings.py
src/laurel/: __init__.py  __main__.py  hooks.py  logging_filters.py  settings.py
src/laurel/datasets/: directory_partitioned.py  geoparquet.py  shapefile.py
src/laurel/models/: charging_algorithms.py  dwell_sets.py  group_times.py  manage_charging.py  sampling.py  summarize.py
src/laurel/routing/: nodes.py  parser.py  server.py
src/laurel/scenario_builders/: __init__.py  batt_dual_pow.py  batt_man.py  batt_pow.py  ca_eight.py  ca_eight_adopt.py  ranger.py  scale_test.py  sense.py
src/laurel/scenario_framework/: build.py  cmd.py  io.py  nodes.py  read.py
src/laurel/scenarios/: build.py  cmd.py  io.py  nodes.py  read.py
src/laurel/utils/: align.py  data.py  distributed.py  events.py  geo.py  h3.py  hex_neighbors.py  infra.py  location_grouping.py  logging.py  mapping.py  mode_masks.py  open_street_map.py  params.py  plotting.py  sensitivity.py
src/megaPLuG/: __init__.py  __main__.py  settings.py
src/megaPLuG/datasets/: directory_partitioned.py  geopackage.py  geoparquet.py
src/megaPLuG/models/: charging_algorithms.py  charging_pgm.py  dwell_sets.py  group_times.py  manage_charging.py  pgm.py  routing.py  sampling.py  summarize.py  summarize_quantiles.py
src/megaPLuG/scenarios/: build.py  cmd.py  io.py  manage_cmd_calls.py  manage_scenarios.py  nodes.py  read.py
src/megaPLuG/utils/: align.py  data.py  distributed.py  events.py  geo.py  h3.py  infra.py  local_time.py  location_grouping.py  logging.py  mapping.py  naics.py  open_street_map.py  params.py  plotting.py  sensitivity.py  time.py
src/megaplug/: __main__.py  settings.py
src/megaplug/datasets/: directory_partitioned.py  geodatabase.py
tests/: test_mode_masks.py
tests/datasets/: __init__.py  test_directory_partitioned.py
tests/models/: test_sampling.py  test_summarize.py
tests/utils/: test_data.py
(+152 files in other folders)
