[project]
name = "megaPLuG"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fletcher Passow", email = "fletcherpassow@icloud.com" }
]
dependencies = [
    "arviz>=0.18.0",
    "cvxpy>=1.5.3",
    "dask>=2024.5.2",
    "geopandas>=1.0.1",
    "graphviz~=0.20.1",
    "h3~=4.1",
    "ipython~=8.10 ; python_version >= '3.8'",
    "jupyter~=1.0",
    "jupyterlab~=3.0",
    "jupyterlab_server>=2.11.1",
    "kedro>=0.19.11",
    "kedro-datasets[pandas.CSVDataset,pandas.FeatherDataset,matplotlib.MatplotlibWriter,dask.ParquetDataset]>=1.0",
    "kedro-telemetry>=0.3.1",
    "kedro-viz>=10.2.0",
    "numpyro~=0.13.0",
    "pandas>=2.2.2",
    "pre-commit>=3.7.1",
    "scikit-learn~=1.0",
    "seaborn>=0.13.2",
    "tensorflow-probability~=0.20.1",
    "gurobipy~=10.0",
    "esbonio>=0.16.4",
    "numba>=0.59.1",
    "pyogrio>=0.9.0",
    "dask-geopandas>=0.4.1",
    "numpy~=2.0",
    "osqp>=0.6.7.post1",
    "ecos>=2.0.14",
    "scs>=3.2.7",
    "tzfpy[pytz]>=0.15.6",
    "routingpy>=1.3.0",
    "docker>=7.1.0",
    "openturns>=1.24",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
megaPLuG = "megaPLuG.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx-autodoc-typehints>=2.5.0",
    "nbsphinx>=0.9.5",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=4.0.0",
    "sphinx-rtd-theme>=3.0.1",
    "folium>=0.18.0",
    "mapclassify>=2.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/megaplug"]

[tool.kedro]
package_name = "megaPLuG"
project_name = "megaPLuG"
kedro_init_version = "0.19.1"
tools = "['Linting', 'Documentation', 'Data Structure', 'Kedro Viz']"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL", # Pylint
]
ignore = ["E501", "PLR0913"]  # Don't report line-too-long
