[project]
name = "megaPLuG"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fletcher Passow", email = "fletcherpassow@icloud.com" }
]
dependencies = [
    "dask>=2024.5.2",
    "geopandas>=1.0.1",
    "h3~=4.1",
    "kedro>=0.19.11",
    "kedro-datasets[pandas.CSVDataset,pandas.FeatherDataset,matplotlib.MatplotlibDataset,dask.ParquetDataset]>=1.0",
    "kedro-viz>=10.2.0",
    "pandas>=2.2.2",
    "scikit-learn~=1.0",
    "seaborn>=0.13.2",
    "numba>=0.59.1",
    "pyogrio>=0.9.0",
    "dask-geopandas>=0.4.1",
    "numpy~=2.0",
    "tzfpy[pytz]>=0.15.6",
    "routingpy>=1.3.0",
    "docker>=7.1.0",
    "openturns>=1.24",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "pyinstrument>=5.0.1",
    "aiohttp>=3.11.18",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
megaPLuG = "megaPLuG.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "sphinx-autodoc-typehints>=2.5.0",
    "nbsphinx>=0.9.5",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=4.0.0",
    "sphinx-rtd-theme>=3.0.1",
    "folium>=0.18.0",
    "mapclassify>=2.8.1",
    "pre-commit>=4.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/megaplug"]

[tool.kedro]
package_name = "megaPLuG"
project_name = "megaPLuG"
kedro_init_version = "0.19.1"
tools = "['Linting', 'Documentation', 'Data Structure', 'Kedro Viz']"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL", # Pylint
]
ignore = ["E501", "PLR0913"]  # Don't report line-too-long
